@@ -152,6 +152,7 @@ protected:
 	void writeRotateElement(const irr::core::vector3df& axis, irr::f32 angle);
 	void writeScaleElement(const irr::core::vector3df& scale);
 	void writeTranslateElement(const irr::core::vector3df& translate);
+	void writeLookAtElement(const irr::core::vector3df& eyePos, const irr::core::vector3df& targetPos, const irr::core::vector3df& upVector);
 	void writeMatrixElement(const irr::core::matrix4& matrix);
 
 	struct SComponentGlobalStartPos
